# hapztext-v2

./: .env.sample  .env.vercel.example  .gitignore  .vercelignore  API_GUIDE.md  Dockerfile  MEDIA_FIX_GUIDE.md  MEDIA_FIX_SUCCESS_SUMMARY.md  Makefile  NOTIFICATIONS.md  VERCEL_CHANGES_SUMMARY.md  VERCEL_CHECKLIST.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_QUICK_DEPLOY.sh  VERCEL_QUICK_START.md  VERCEL_README.md  VERCEL_SETUP.md  VERCEL_TROUBLESHOOTING.md  build.sh  check_media.py  check_remote.py  deploy_vps.py  diagnose_media_vps.py  docker-compose.yml  fix_media_serving.py  nnn.py  pyproject.toml  pytest.ini  quick_deploy.py  reproduce_error.py  reproduce_output.txt  requirements-prod.txt  requirements.txt  restart_daphne.py  restart_daphne_fix_media.py  search_output.txt  startup.sh  test_log.py  test_media_config.py  (+4 more)
api/: asgi_handler.py  index.py
api/v1/: __init__.py  authentication.py  calls.py  chat.py  notifications.py  posts.py  users.py
apps/application/authentication/: ports.py  rules.py
apps/application/chat/: rules.py
apps/application/notifications/: ports.py  rules.py
apps/application/posts/: dtos.py  ports.py  rules.py
apps/application/users/: dtos.py  ports.py  rules.py
apps/authentication/: apps.py
apps/authentication/application/: dtos.py  ports.py  rules.py
apps/authentication/domain/: entities.py  enums.py
apps/authentication/infrastructure/: models.py  repositories.py  services.py
apps/authentication/models/: __init__.py
apps/authentication/presentation/: serializers.py  views.py
apps/core/: celery.py  exceptions.py  logging.py  utils.py
apps/domain/authentication/: entities.py  value_objects.py
apps/domain/notifications/: entities.py  enums.py
apps/infrastructure/: password_service.py
apps/notifications/: apps.py
apps/posts/: apps.py
apps/presentation/: apps.py  factory.py  responses.py  rule_registry.py
apps/users/: apps.py
config/: asgi.py  celery.py  routing.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  testing.py
core/presentation/: serializers.py
docs/: API_GUIDE.md  FRD.md  NOTIFICATIONS.md
(+123 files in other folders)
