[project]
name = "hapztext-clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-rest-knox>=5.0.2",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.7.1",
    "faker>=37.4.0",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "pillow>=11.3.0",
    "pyotp>=2.9.0",
    "whitenoise>=6.9.0",
]
